--- a/home_work2/Dockerfile.linux
+++ b/home_work2/Dockerfile.linux
@@ -8,4 +8,5 @@ RUN apk update && \
 VOLUME /data
 WORKDIR /data
 
-RUN git clone https://github.com/penknife/learning_dev_ops.git
+RUN git clone https://github.com/penknife/learning_dev_ops.git && \
+    ls
